c++: nested generic lambda in DMI [PR101717]

We were already checking COMPLETE_TYPE_P to recognize instantiation of a
generic lambda, but didn't consider that we might be nested in a non-generic
lambda.

	PR c++/101717

gcc/cp/ChangeLog:

	* lambda.cc (lambda_expr_this_capture): Check all enclosing
	lambdas for completeness.

gcc/testsuite/ChangeLog:

	* g++.dg/cpp1y/lambda-generic-this4.C: New test.